added some hw1 stuff

--- a/Lab3/Lab3.ipynb
+++ b/Lab3/Lab3.ipynb
@@ -1569,7 +1569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Looking at the elapsed times for both models, it seems that Polynomial Regression takes longer which makes sense because it is a more complex owrk"
+    "###### Looking at the elapsed times for both models, it seems that Polynomial Regression takes longer which makes sense because it is a more complex equation/model. However, the increase is negligible, being fractions of a second"
    ]
   }
  ],
