--- a/Lab2/Lab2.ipynb
+++ b/Lab2/Lab2.ipynb
@@ -595,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to make the prediction and show the relevant statistics\n",
+    "# Function to make the prediction and show the relevant statistics given initiated sklearn model\n",
     "def prediction(model):\n",
     "    # Fit the model\n",
     "    model.fit(X_train, y_train)\n",
